<resources>
    <string name="app_name">HelloAuction</string>
    <string name="title">HelloAuction</string>
    <string name="action_logout">Logout</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="lonly">It is Lonely Here</string>
    <string name="get_started">Get Started</string>
    <string name="cannot_query">Cannot query unknown URI</string>
    <string name="unknow_uri">Unknown uri</string>
    <string name="match">with match</string>
    <string name="require_name">name is required</string>
    <string name="require_email">email is required</string>
    <string name="require_password">password is required</string>
    <string name="fail_to_insert_row">fail to insert the row</string>
    <string name="require_price">price is required</string>
    <string name="require_description">description is required</string>
    <string name="require_image">image is required</string>
    <string name="require_is_end">value is required</string>
    <string name="require_start_time">start time is required</string>
    <string name="require_end_time">end time is required</string>
    <string name="require_winner">winner is required</string>
    <string name="require_user">user is required</string>
    <string name="not_support">Insertion is not supported for</string>
    <string name="require_time">time is required</string>
    <string name="require_item">item is required</string>
    <string name="deletion_not_support">deletion is not supported</string>
    <string name="update_not_support">Update not supported</string>
    <string name="email_already_exist">Email already exsits</string>
    <string name="editor_insert_user_failed">User registration failed</string>
    <string name="editor_insert_user_successful">User registered successfully</string>
    <string name="dont_miss">Dont miss anything</string>
    <string name="login_fail">Login failed</string>
    <string name="correct_email">Enter valid email address</string>
    <string name="email_passwrd_required">Both email and password are required</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Description</string>
    <string name="item_price">Starting Value</string>
    <string name="editor_insert_item_failed">item insertion failed</string>
    <string name="editor_insert_item_successful">item successfully saved</string>
    <string name="image_too_large">Image is too large</string>
    <string name="item_duration">Set Duration</string>
    <string name="auction_duration">Maximum Auction Duration is 1 Hour</string>
    <string name="item_minute">Minutes</string>
    <string name="enter_correct_duration">Incorrect duration value</string>
    <string name="name_item">Name</string>
    <string name="price_item">Started Price</string>
    <string name="Ends_On">Ends On</string>
    <string name="auction">auction</string>
    <string name="won_item">wonItem</string>
    <string name="my_item">myItem</string>
    <string name="item_time_left">Time Left</string>
    <string name="start_time">Started At</string>
    <string name="price">Current bid($)</string>
    <string name="set_price">Set price</string>
    <string name="item_id">Item Id</string>
    <string name="large_data">Loading failed due to large image data</string>
    <string name="no_bids">No bids</string>
    <string name="editor_insert_bid_failed">Bid not saved</string>
    <string name="editor_insert_bid_successful">Now you are in front</string>
    <string name="enter_large_amount">Your value is small than current bid. Please enter a higher value than the current bid</string>
    <string name="update_fail">Updation failed</string>
    <string name="ended">Ended</string>
    <string name="start_large_amount">You should enter value grater than starting bid</string>
    <string name="your_bid">Your Bid</string>
    <string name="dollar">($)</string>
    <string name="auto_bid_inserted">User bided</string>
    <string name="winning_bid">Winning Bid($)</string>
    <string name="title_home">Add item to auction</string>
    <string name="user">user</string>
    <string name="on_item">on item</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="robot_created">robot_created</string>
    <string name="robot_name">Robot_User_osh</string>
    <string name="robot_email">robot@gmail.com</string>
    <string name="borot_passwrd">Robot</string>
    <string name="robot">robot</string>
    <string name="one">1</string>

    <!-- Strings for titles-->
    <string-array name="title_array">
        <item>Auction</item>
        <item>Won Items</item>
        <item>My Items</item>

    </string-array>
</resources>
