<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:padding="@dimen/text_top_padding"
            android:src="@android:drawable/ic_dialog_dialer" />

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_top_padding"
                    android:layout_marginRight="@dimen/text_top_padding"
                    android:layout_marginTop="@dimen/text_top_padding"
                    android:layout_weight="2.5"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/name_item"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black" />

                <TextView

                    android:id="@+id/name_item_text_view"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_top_padding"
                    android:layout_marginRight="@dimen/text_top_padding"
                    android:layout_marginTop="@dimen/text_top_padding"
                    android:layout_weight="4"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="?android:textAppearanceSmall" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_top_padding"
                    android:layout_marginRight="@dimen/text_top_padding"
                    android:layout_marginTop="@dimen/text_top_padding"
                    android:layout_weight="2.5"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/price_item"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/price_item_text_view"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_top_padding"
                    android:layout_marginRight="@dimen/text_top_padding"
                    android:layout_marginTop="@dimen/text_top_padding"
                    android:layout_weight="4"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="?android:textAppearanceSmall" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/text_top_padding">

                <TextView

                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_top_padding"
                    android:layout_marginRight="@dimen/text_top_padding"
                    android:layout_marginTop="@dimen/text_top_padding"
                    android:layout_weight="2.5"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/Ends_On"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black" />

                <TextView

                    android:id="@+id/date_item_text_view"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_top_padding"
                    android:layout_marginRight="@dimen/text_top_padding"
                    android:layout_marginTop="@dimen/text_top_padding"
                    android:layout_weight="4"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="?android:textAppearanceSmall" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>